Address review findings on the REST API and MCP tooling
- EntityJson: dividend events without ex-date, payment date or amount no
  longer break the holdings response
- Request: malformed percent-encoding in the query is a 400, not a 500
- RestApiServer: virtual threads, so blocking waits (save, open,
  update-quotes ?wait) do not starve other requests
- ClientInput: a failed backup during an API save is logged instead of
  opening a modal dialog that would lock the API
- RestApiAddon: log the port without digit grouping
- AttributeListTab: tolerate attribute types without a field type
- translations: escape apostrophes in MessageFormat patterns (ca, fr, it),
  translate "instrument" as a security (ru, cs, sk, zh_TW)
- ADR 0002: record the save and open endpoints
- workflow: read-only token and no persisted credentials for openapi-lint
- pp-apply-plan: a dry run forces dry_run for commit_/import_ tools and
  skips save_file/open_file; README states that --commit does not save
- PairingServiceTest: write control characters as escapes